--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@ export DPKG_GENSYMBOLS_CHECK_LEVEL=4
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-override_dh_auto_test:
+export QT_SELECT := qt5
 
 %:
 	dh $@ --parallel --fail-missing
